# wplace_helper

./: .gitignore  README.md  pyproject.toml
wplace_helper/: __main__.py  color_reduction.py  split_by_color.py  wplace_colors.py
wplace_helper/cli/: __init__.py
wplace_helper/gui/: __init__.py  __main__.py  main_window.py  utils.py
wplace_helper/lib/: __init__.py  color_reduction.py  color_reduction_test.ipynb  color_split.py  split_by_color.py  utils.py  wplace_colors.py
