[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wplace_helper"
version = "0.1.0"
authors = [{ name = "TheRaphael0000", email = "you@example.com" }]
description = "A minimal CLI project."
dependencies = ["opencv-python", "numpy"]

[tool.hatch.build.targets.wheel]
packages = ["wplace_helper"]

[project.scripts]
wplace_helper = "src.wplace_helper.__main__:main"