[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wplace_helper"
version = "0.1.0"
authors = [{ name = "TheRaphael0000", email = "you@example.com" }]
description = "A minimal CLI project."
dependencies = ["opencv-python", "numpy", "scikit-image", "PySide6"]

[tool.hatch.build.targets.wheel]
packages = ["wplace_helper"]

[project.scripts]
wplace_helper = "wplace_helper.__main__:main"
wplace_helper_cli = "wplace_helper.cli.__main__:main"
wplace_helper_gui = "wplace_helper.gui.__main__:main"
